[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "AvalancheHomology"
version = "0.1.0"
description = "Avalanche homology tools"
authors = [
  {name = "Jason P. Smith"},
  {name = "Henri Riihimaki"}
]

dependencies = [
  "numpy",
  "matplotlib",
  "gudhi"
]

[tool.setuptools] 
packages = ["avalanche"]
